--- a/css/styles.css
+++ b/css/styles.css
@@ -769,6 +769,10 @@ body {
   border-color: rgba(77, 90, 229, 1);
 }
 
+.privacy-policy {
+  color: #4D5AE5;
+}
+
 .form-send-btn {
   font-weight: 500;
   font-size: 16px;
